<resources>    <string name="app_name">Chat</string>    <!-- start page -->    <string name="start_small_title">Log in to your account</string>    <string name="start_info1">Connect people around the world</string>    <string name="start_info2">Live your life smarter with us</string>    <string name="start_info3">Get a new experience of imagination</string>    <string name="get_started">Get Started</string>    <string name="tnc">Terms &amp; Conditions</string>    <string name="tnc_content">        By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to .\n\n        is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.\n\n        The Chat app stores and processes personal data that you have provided to us, in order to provide my Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the Chat app won’t work properly or at all.\n\n        You should be aware that there are certain things that will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.\n\n        If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.\n\n        Along the same lines, cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, cannot accept responsibility.\n\n        With respect to ’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.\n\n        At some point, we may wish to update the app. The app is currently available on Android – the requirements for system(and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. does not promise that it will always update the app so that it is relevant to you and/or works with the Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.\n\n        Changes to This Terms and Conditions\n\n        I may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Terms and Conditions on this page. These changes are effective immediately after they are posted on this page.\n\n        Contact Us\n\n        If you have any questions or suggestions about my Terms and Conditions, do not hesitate to contact me.    </string>    <!-- login page -->    <string name="forgot_password">Forgot Password?</string>    <string name="remember_me">Remember me</string>    <string name="new_user">New User?</string>    <!-- general -->    <string name="ok">OK</string>    <string name="password">Password</string>    <string name="username">Username</string>    <string name="sign_up">Sign Up</string>    <string name="login">Login</string>    <string name="register">Register</string>    <string name="email">Email</string>    <string name="display_name">Display Name</string>    <string name="already_has_a_account">Already has a account?</string>    <string name="click_here_to_login">Click here to login</string>    <string name="choose_one_to_get_photo">Choose one to get photo</string>    <string name="cancel">Cancel</string>    <!-- reg page -->    <string name="username_not_exist">Username is not exist.</string>    <string name="error_password">Error password</string>    <string name="min_char_length">Min character length is 8</string>    <string name="close_app_hint">Please click BACK again to exit</string>    <string name="log_in_to_your_account">Log in to your account</string>    <string name="i_agree_the_terms_and_conditions">I agree the Terms and Conditions</string>    <string name="display_name_cannot_empty">Display name cannot empty</string>    <string name="loading">Loading</string>    <string name="connect_db_failed">Failed to connect Database</string>    <string name="connect_db_failed_content">Please try again later and contact admin if possible</string>    <string name="register_failed">Register Failed</string>    <string name="username_is_already_exisit">Username is already exist</string>    <string name="email_correct_format">Please enter correct format email</string>    <string name="yesterday">Yesterday</string>    <string name="me">Me:</string>    <string name="refresh">Refresh</string>    <string name="enter_message">Enter message</string>    <string name="nav_header_desc">Navigation bar</string>    <string name="nav_header_title">Username</string>    <string name="nav_header_subtitle">Email</string>    <string name="logout">Logout</string>    <string name="settings">Settings</string>    <string name="profile">Profile</string>    <string name="confirmPassword">New Password</string>    <string name="update">Update</string>    <string name="chat_list">Chat List</string>    <string name="add_friends">Add friends</string></resources>