<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:orientation="vertical"    android:layout_width="match_parent"    android:layout_height="match_parent">    <LinearLayout        android:id="@+id/layout_top"        android:orientation="horizontal"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintStart_toStartOf="parent"        android:layout_height="wrap_content"        android:layout_width="match_parent">        <androidx.cardview.widget.CardView            app:cardCornerRadius="16dp"            app:cardBackgroundColor="@color/colorOnPrimary"            app:cardElevation="10dp"            style="@style/CardViewBackBtn">            <ImageView                android:id="@+id/img_back"                app:srcCompat="@drawable/baseline_keyboard_backspace_black_48"                style="@style/ImageViewBackBtn" />        </androidx.cardview.widget.CardView>        <TextView            android:text="@string/register"            style="@style/TextViewTitle" />    </LinearLayout>    <LinearLayout        android:id="@+id/layout_form"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintTop_toBottomOf="@+id/layout_top"        app:layout_constraintVertical_bias="0.25"        android:layout_height="wrap_content"        android:layout_width="match_parent"        android:padding="@dimen/formPadding"        android:orientation="vertical"        >        <LinearLayout            android:layout_height="90dp"            android:layout_width="90dp"            android:layout_gravity="center"            android:background="@drawable/image_view_border_radius">            <com.exmaple.jarvis.chat.CustomImageView                android:id="@+id/img_avatar"                android:layout_height="80dp"                android:layout_width="80dp"                android:layout_gravity="center"                android:gravity="center"                app:srcCompat="@drawable/placeholder"                android:scaleType="centerCrop"                android:layout_margin="5dp"                />        </LinearLayout>        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/til_username"            style="@style/TextInputLayoutStyle"            app:hintTextAppearance="@style/TextInputLayoutHintText"            >            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/et_username"                android:hint="@string/username"                style="@style/EditTextTIL"                />        </com.google.android.material.textfield.TextInputLayout>        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/til_password"            app:hintTextAppearance="@style/TextInputLayoutHintText"            app:passwordToggleEnabled="true"            style="@style/TextInputLayoutStyle">            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/et_password"                android:hint="@string/password"                android:inputType="textPassword"                style="@style/EditTextTIL"                />        </com.google.android.material.textfield.TextInputLayout>        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/til_display_name"            app:hintTextAppearance="@style/TextInputLayoutHintText"            app:passwordToggleEnabled="true"            style="@style/TextInputLayoutStyle">            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/et_display_name"                android:hint="@string/display_name"                style="@style/EditTextTIL"                />        </com.google.android.material.textfield.TextInputLayout>        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/til_email"            app:hintTextAppearance="@style/TextInputLayoutHintText"            app:passwordToggleEnabled="true"            style="@style/TextInputLayoutStyle">            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/et_email"                android:hint="@string/email"                style="@style/EditTextTIL"                />        </com.google.android.material.textfield.TextInputLayout>    </LinearLayout>    <LinearLayout        app:layout_constraintTop_toBottomOf="@+id/layout_form"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintVertical_bias="0.5"        android:layout_height="wrap_content"        android:layout_width="match_parent"        android:orientation="vertical"        >        <androidx.cardview.widget.CardView            android:id="@+id/cv_login"            app:cardBackgroundColor="@color/colorAccent"            app:cardCornerRadius="8dp"            style="@style/ButtonCardView">            <TextView                android:id="@+id/tv_login"                android:text="@string/login"                style="@style/ButtonText"/>        </androidx.cardview.widget.CardView>        <LinearLayout            android:layout_height="wrap_content"            android:layout_width="wrap_content"            android:layout_gravity="center"            android:paddingTop="@dimen/textPaddingVertical"            android:paddingBottom="@dimen/textPaddingVertical">            <TextView                style="@style/ReminderText"                android:padding="0dp"                android:layout_height="wrap_content"                android:layout_width="wrap_content"                android:textSize="@dimen/buttonText"                android:text="@string/already_has_a_account"/>            <TextView                android:id="@+id/tv_login_reminder"                style="@style/ReminderText"                android:padding="0dp"                android:layout_height="wrap_content"                android:layout_width="wrap_content"                android:textColor="@color/colorPrimary"                android:textSize="@dimen/buttonText"                android:text="@string/click_here_to_login"/>        </LinearLayout>    </LinearLayout></androidx.constraintlayout.widget.ConstraintLayout>