<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:orientation="vertical"    android:layout_width="match_parent"    android:layout_height="match_parent">    <LinearLayout        android:id="@+id/layout_top"        android:orientation="horizontal"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintStart_toStartOf="parent"        android:layout_height="wrap_content"        android:layout_width="match_parent">        <androidx.cardview.widget.CardView            app:cardCornerRadius="16dp"            app:cardBackgroundColor="@color/colorOnPrimary"            app:cardElevation="10dp"            style="@style/CardViewBackBtn">            <ImageView                android:id="@+id/img_back"                app:srcCompat="@drawable/baseline_keyboard_backspace_black_48"                style="@style/ImageViewBackBtn" />        </androidx.cardview.widget.CardView>        <TextView            android:text="@string/login"            style="@style/TextViewTitle" />    </LinearLayout>    <LinearLayout        android:id="@+id/layout_form"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintTop_toBottomOf="@+id/layout_top"        app:layout_constraintVertical_bias="0.45"        android:layout_height="wrap_content"        android:layout_width="match_parent"        android:padding="@dimen/formPadding"        android:orientation="vertical"        >        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/til_username"            style="@style/TextInputLayoutStyle"            app:hintTextAppearance="@style/TextInputLayoutHintText"            >            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/et_username"                android:hint="@string/username"                style="@style/EditTextTIL"                />        </com.google.android.material.textfield.TextInputLayout>        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/til_password"            app:hintTextAppearance="@style/TextInputLayoutHintText"            app:passwordToggleEnabled="true"            style="@style/TextInputLayoutStyle">            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/et_password"                android:hint="@string/password"                android:inputType="textPassword"                style="@style/EditTextTIL"                />        </com.google.android.material.textfield.TextInputLayout>        <LinearLayout            android:layout_height="wrap_content"            android:layout_width="match_parent"            >            <Switch                android:id="@+id/switch_remember_me"                android:layout_height="wrap_content"                android:layout_width="wrap_content"                />            <TextView                android:id="@+id/tv_remember_me"                style="@style/SmallText"                android:layout_width="wrap_content"                android:text="@string/remember_me"                android:paddingRight="5dp"                android:paddingLeft="5dp"                android:paddingTop="5dp"                android:paddingBottom="5dp"                android:fontFamily="sans-serif"                android:textSize="@dimen/buttonText"                android:alpha="0.45"                />            <LinearLayout                android:layout_height="match_parent"                android:layout_width="match_parent"                android:gravity="end">            <TextView                android:id="@+id/tv_forgot_password"                style="@style/SmallText"                android:layout_width="wrap_content"                android:layout_height="match_parent"                android:gravity="center"                android:fontFamily="sans-serif"                android:paddingLeft="5dp"                android:paddingRight="5dp"                android:paddingTop="5dp"                android:paddingBottom="5dp"                android:text="@string/forgot_password"                android:textSize="@dimen/buttonText"                android:textColor="@color/colorPrimary"                />            </LinearLayout>        </LinearLayout>    </LinearLayout>    <LinearLayout        app:layout_constraintTop_toBottomOf="@+id/layout_form"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintEnd_toEndOf="parent"        android:layout_height="wrap_content"        android:layout_width="match_parent"        android:orientation="vertical"        >        <androidx.cardview.widget.CardView            android:id="@+id/cv_login"            app:cardBackgroundColor="@color/colorAccent"            app:cardCornerRadius="8dp"            style="@style/ButtonCardView">            <TextView                android:id="@+id/tv_login"                android:text="@string/login"                style="@style/ButtonText"/>        </androidx.cardview.widget.CardView>        <LinearLayout            android:layout_height="wrap_content"            android:layout_width="wrap_content"            android:layout_gravity="center"            android:paddingTop="@dimen/textPaddingVertical"            android:paddingBottom="@dimen/textPaddingVertical">            <TextView                style="@style/ReminderText"                android:padding="0dp"                android:layout_height="wrap_content"                android:layout_width="wrap_content"                android:textSize="@dimen/buttonText"                android:text="@string/new_user"/>            <TextView                android:id="@+id/tv_register_reminder"                style="@style/ReminderText"                android:padding="0dp"                android:layout_height="wrap_content"                android:layout_width="wrap_content"                android:textColor="@color/colorPrimary"                android:textSize="@dimen/buttonText"                android:text="@string/sign_up"/>        </LinearLayout>    </LinearLayout></androidx.constraintlayout.widget.ConstraintLayout>