<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".StartActivity">    <LinearLayout        android:orientation="vertical"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintBottom_toTopOf="@+id/layout_image"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintStart_toEndOf="parent"        android:layout_height="wrap_content"        android:layout_width="match_parent">        <TextView            android:id="@+id/tv_small_title"            style="@style/SmallText"            android:text="@string/log_in_to_your_account"            />    </LinearLayout>    <LinearLayout        android:id="@+id/layout_image"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintVertical_bias="0.35"        android:layout_height="wrap_content"        android:layout_width="match_parent"        android:orientation="vertical">        <com.exmaple.jarvis.chat.ImageSlider.CustomViewPager            android:id="@+id/vp_image_slider"            android:layout_height="300dp"            android:layout_width="match_parent" />        <LinearLayout            android:id="@+id/dots_container"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:orientation="horizontal"            android:gravity="center"            android:layout_marginTop="@dimen/textPaddingVertical"/>    </LinearLayout>    <LinearLayout        android:id="@+id/layout_bottom"        app:layout_constraintTop_toBottomOf="@+id/layout_image"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintVertical_bias="0.5"        android:layout_height="wrap_content"        android:layout_width="match_parent"        android:orientation="vertical">        <LinearLayout            android:layout_height="wrap_content"            android:layout_width="match_parent"            android:gravity="center"            android:paddingTop="20dp"            android:paddingBottom="20dp"            android:paddingLeft="@dimen/formPadding"            android:paddingRight="@dimen/formPadding">            <com.uniquestudio.library.CircleCheckBox                android:id="@+id/cb_tnc"                app:background_color="@color/colorOnPrimary"                app:border_color="@color/colorPrimary"                app:tick_color="@color/colorPrimary"                app:border_width="2dp"                app:tick_width="2dp"                app:animation_duration="200"                android:layout_width="30dp"                android:layout_height="30dp" />            <TextView                android:id="@+id/tv_tnc"                android:layout_marginRight="5dp"                android:layout_marginLeft="5dp"                android:padding="0dp"                style="@style/SmallText"                android:text="@string/i_agree_the_terms_and_conditions"/>        </LinearLayout>        <androidx.cardview.widget.CardView            android:id="@+id/cv_login"            app:cardBackgroundColor="@color/colorAccent"            app:cardCornerRadius="8dp"            style="@style/ButtonCardView">            <TextView                android:id="@+id/tv_login"                android:text="@string/get_started"                style="@style/ButtonText"/>        </androidx.cardview.widget.CardView>        <!--<TextView-->            <!--android:id="@+id/tv_tnc"-->            <!--android:text="@string/tnc"-->            <!--style="@style/ReminderText"-->            <!--android:layout_gravity="center"/>-->    </LinearLayout></androidx.constraintlayout.widget.ConstraintLayout>