<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"    android:layout_height="match_parent"    xmlns:tools="http://schemas.android.com/tools"    android:background="@color/colorAccent2"    >    <LinearLayout        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintBottom_toBottomOf="parent"        android:layout_height="match_parent"        android:layout_width="match_parent" />    <LinearLayout        android:id="@+id/layout_top"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="@color/colorPrimary"        android:orientation="vertical"        android:padding="40dp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent">        <com.exmaple.jarvis.chat.CustomImageView xmlns:app="http://schemas.android.com/apk/res-auto"            android:id="@+id/profile_image"            android:layout_width="70dp"            android:layout_height="70dp"            android:layout_gravity="center"            android:layout_margin="10dp"            android:src="@drawable/ic_launcher_background" />        <TextView            android:id="@+id/tv_display_name"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:maxLines="2"            android:textAlignment="center"            android:textAppearance="?android:attr/textAppearanceLarge"            tools:text="Chris" />        <TextView            android:id="@+id/tv_username"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:maxLines="2"            android:textAlignment="center"            android:textAppearance="?android:attr/textAppearanceMedium"            tools:text="christest" />        <TextView            android:id="@+id/tv_email"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:maxLines="2"            android:textAlignment="center"            android:textAppearance="?android:attr/textAppearanceMedium"            tools:text="christest@test.com" />    </LinearLayout>    <LinearLayout        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/layout_top"        app:layout_constraintBottom_toTopOf="@+id/cv_update"        android:orientation="vertical"        android:paddingLeft="40dp"        android:paddingRight="40dp"        android:gravity="center"        android:layout_height="0dp"        android:layout_width="match_parent">        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/til_display_name"            style="@style/TextInputLayoutStyle"            app:hintTextAppearance="@style/TextInputLayoutHintText">            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/tiet_display_name"                style="@style/EditTextTIL"                android:hint="@string/display_name" />        </com.google.android.material.textfield.TextInputLayout>        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/til_new_password"            style="@style/TextInputLayoutStyle"            app:hintTextAppearance="@style/TextInputLayoutHintText">            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/tiet_new_password"                style="@style/EditTextTIL"                android:hint="@string/confirmPassword" />        </com.google.android.material.textfield.TextInputLayout>        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/til_email"            style="@style/TextInputLayoutStyle"            app:hintTextAppearance="@style/TextInputLayoutHintText">            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/tiet_email"                style="@style/EditTextTIL"                android:hint="@string/email" />        </com.google.android.material.textfield.TextInputLayout>        <!--<androidx.cardview.widget.CardView-->            <!--android:layout_height="match_parent"-->            <!--android:layout_width="match_parent"-->            <!--android:layout_marginHorizontal="50dp"-->            <!--android:layout_marginVertical="60dp"-->            <!--app:cardCornerRadius="10dp"-->            <!--app:cardElevation="20dp">-->            <!--<LinearLayout-->                <!--android:layout_height="wrap_content"-->                <!--android:layout_width="match_parent"-->                <!--android:orientation="vertical"-->                <!--android:layout_gravity="center"-->                <!--android:paddingHorizontal="40dp">-->                <!--<com.google.android.material.textfield.TextInputLayout-->                    <!--android:id="@+id/til_display_name"-->                    <!--style="@style/TextInputLayoutStyle"-->                    <!--app:hintTextAppearance="@style/TextInputLayoutHintText">-->                    <!--<com.google.android.material.textfield.TextInputEditText-->                        <!--android:id="@+id/tiet_display_name"-->                        <!--style="@style/EditTextTIL"-->                        <!--android:hint="@string/display_name" />-->                <!--</com.google.android.material.textfield.TextInputLayout>-->                <!--<com.google.android.material.textfield.TextInputLayout-->                    <!--android:id="@+id/til_new_password"-->                    <!--style="@style/TextInputLayoutStyle"-->                    <!--app:hintTextAppearance="@style/TextInputLayoutHintText">-->                    <!--<com.google.android.material.textfield.TextInputEditText-->                        <!--android:id="@+id/tiet_new_password"-->                        <!--style="@style/EditTextTIL"-->                        <!--android:hint="@string/confirmPassword" />-->                <!--</com.google.android.material.textfield.TextInputLayout>-->                <!--<com.google.android.material.textfield.TextInputLayout-->                    <!--android:id="@+id/til_email"-->                    <!--style="@style/TextInputLayoutStyle"-->                    <!--app:hintTextAppearance="@style/TextInputLayoutHintText">-->                    <!--<com.google.android.material.textfield.TextInputEditText-->                        <!--android:id="@+id/tiet_email"-->                        <!--style="@style/EditTextTIL"-->                        <!--android:hint="@string/email" />-->                <!--</com.google.android.material.textfield.TextInputLayout>-->            <!--</LinearLayout>-->        <!--</androidx.cardview.widget.CardView>-->    </LinearLayout>    <androidx.cardview.widget.CardView        android:id="@+id/cv_update"        app:cardBackgroundColor="@color/colorAccent"        app:cardCornerRadius="8dp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintEnd_toEndOf="parent"        android:layout_marginBottom="50dp"        style="@style/ButtonCardView">        <TextView            android:id="@+id/tv_login"            android:text="@string/update"            style="@style/ButtonText"/>    </androidx.cardview.widget.CardView>    <!--<LinearLayout-->        <!--android:id="@+id/layout_bottom"-->        <!--android:layout_width="match_parent"-->        <!--android:layout_height="wrap_content"-->        <!--android:orientation="vertical"-->        <!--app:layout_constraintBottom_toBottomOf="parent"-->        <!--app:layout_constraintEnd_toEndOf="parent"-->        <!--app:layout_constraintHorizontal_bias="1.0"-->        <!--app:layout_constraintStart_toStartOf="parent"-->        <!--app:layout_constraintTop_toTopOf="parent"-->        <!--app:layout_constraintVertical_bias="0.92">-->        <!--<LinearLayout-->            <!--android:layout_width="match_parent"-->            <!--android:layout_height="wrap_content"-->            <!--android:baselineAligned="false"-->            <!--android:gravity="center"-->            <!--android:orientation="horizontal">-->            <!--<androidx.cardview.widget.CardView-->                <!--android:id="@+id/cv_update"-->                <!--android:layout_width="250dp"-->                <!--android:layout_height="50dp"-->                <!--android:text="login"-->                <!--app:cardBackgroundColor="@color/colorPrimary"-->                <!--app:cardCornerRadius="4dp"-->                <!--app:cardElevation="8dp">-->                <!--<RelativeLayout-->                    <!--android:layout_width="match_parent"-->                    <!--android:layout_height="match_parent">-->                    <!--<TextView-->                        <!--android:layout_width="wrap_content"-->                        <!--android:layout_height="wrap_content"-->                        <!--android:layout_centerInParent="true"-->                        <!--android:layout_centerHorizontal="true"-->                        <!--android:text="@string/update"-->                        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->                        <!--android:textAllCaps="true"-->                        <!--android:textColor="#FFFFFF" />-->                <!--</RelativeLayout>-->            <!--</androidx.cardview.widget.CardView>-->        <!--</LinearLayout>-->    <!--</LinearLayout>-->    <ImageView        android:id="@+id/btn_back"        android:layout_width="35dp"        android:layout_height="35dp"        android:src="@drawable/baseline_keyboard_backspace_black_48"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        android:layout_margin="15dp"        android:tint="@android:color/white" /></androidx.constraintlayout.widget.ConstraintLayout>